Initialize with main app (#1)
* feat(spec): Add FreeThinker menu bar AI provocation app specification

- Complete feature specification with 14 functional requirements
- 7 measurable success criteria
- 4 user scenarios covering primary and error flows
- Quality checklist validation completed
- 3 clarifications noted for planning phase

Feature: 001-freethinker-menu-bar-ai-provocation-app

* docs: Add project constitution

- Technical standards: Swift, SwiftUI
- Testing: All features must have unit, integration, UI tests
- Performance: Smooth, fast UI
- Deployment: macOS only, direct distribution, macOS 26

* update spec

* spec

* Add plan for feature 001-freethinker-menu-bar-ai-provocation-app

* docs: Add Phase 1 planning artifacts for FreeThinker

- Complete implementation plan with technical context
- Research document with AI framework and distribution decisions
- Data model definitions for all entities
- Service contracts (AI, TextCapture, Settings)
- Quickstart guide for development setup
- Update agent context (AGENTS.md)

* current data model

* config

* current

* update docs

* update

* update docs

* chore: Move WP01 to doing on spec 001

* chore: Move WP01 to doing on spec 001

* agents

* task progress

* chore: Move WP01 to doing on spec 001

* complete wp1

* chore: Move WP02 to doing on spec 001

* chore: Move WP02 to doing on spec 001

* chore: Move WP04 to doing on spec 001

* chore: Mark T011 as done on spec 001

* chore: Mark T012 as done on spec 001

* chore: Mark T013 as done on spec 001

* chore: Mark T014 as done on spec 001

* chore: Mark T015 as done on spec 001

* chore: Mark T016 as done on spec 001

* feat(WP03): Implement accessibility authorization and text capture pipeline

- Add AccessibilityPermissionService with cooldown logic and settings helper
- Implement AXTextExtractor with prioritized attribute probing and fallback
- Add ClipboardFallbackCapture with snapshot/restore and Cmd+C simulation
- Create DefaultTextCaptureService 

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+.DS_Store
 
 ## User settings
 xcuserdata/
@@ -20,10 +21,10 @@ playground.xcworkspace
 # Swift Package Manager
 #
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
-# Packages/
-# Package.pins
-# Package.resolved
-# *.xcodeproj
+Packages/
+Package.pins
+Package.resolved
+*.xcodeproj
 #
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
@@ -76,3 +77,6 @@ fastlane/test_output
 .github/copilot/
 .kittify/.dashboard
 .code/
+.kittify/logs/
+.kittify/orchestration-state*
+.kittify/workspaces/
